# unikernel_prj

./: .env.example  .gitignore  Makefile  README.md  latex.txt  pyproject.toml  requirements.txt
configs/: cloud.yaml  dataset.yaml  default.yaml  edge.yaml  memory_budget.yaml  pi_edge_runtime.env.example  pi_uefi_bundle.lock.json  training.yaml
configs/experiments/: docker_baseline.yaml  fixed_k7.yaml  local_only.yaml  static_kmax.yaml  static_kmin.yaml
configs/patches/: unikraft_pi4_phase2_bootrestore.patch  unikraft_pi4_phase3_selftest.patch  unikraft_pi4_platform.patch
configs/pi_boot/: cmdline.txt.template  config.txt
configs/pi_phase1/: unisplit_pi4_phase1.defconfig
configs/pi_phase2/: unisplit_pi4_phase2_bootrestore.defconfig
configs/pi_phase3/: unisplit_pi4_phase3_selftest.defconfig
deploy/: .env.docker  Dockerfile.cloud  Dockerfile.edge  docker-compose.yml
docs/: architecture.md  dataset.md  deployment.md  edge_native_runtime.md  examples.md  pi4_phase1_platform_audit.md  pre_pi_validation_checklist.md  protocol.md  raspberry_pi_handoff.md  training.md  unikraft_qemu_validation.md
edge_native/runtime/: CMakeLists.txt
edge_native/runtime/include/: base64.h  cloud_client.h  controller.h  controller_linucb.h  controller_reward.h  edge_model.h  edge_runtime.h  layers.h  model_k7.h  quantize.h  tensor.h  transport.h  transport_backend.h
edge_native/runtime/src/: base64.c  cloud_client.c  controller.c  controller_linucb.c  controller_reward.c  controller_testbin.c  edge_model.c  edge_runtime.c  failure_testbin.c  forward_split_testbin.c  forward_testbin.c  layers_batchnorm.c  layers_conv1d.c  layers_linear.c  layers_pool.c  layers_relu.c  main_edge_cli.c  main_edge_k7_cli.c  model_k7.c  quant_testbin.c  quantize.c  tensor.c  transport_backend_factory.c  transport_common.c  transport_lwip_backend.c  transport_lwip_backend_stub.c  transport_posix_backend.c  transport_posix_http.c  transport_ukstub_backend.c
edge_native/unikraft_edge_selftest/: Config.uk  Kraftfile  Makefile.uk  edge_model_minimal.c  main.c
edge_native/unikraft_hello/: Kraftfile  main.c
edge_native/unikraft_pi4_phase1/: Config.uk  Kraftfile  Makefile.uk  main.c
edge_native/unikraft_pi4_phase2_bootrestore/: Config.uk  Kraftfile  Makefile.uk  main.c
edge_native/unikraft_pi4_phase3_selftest/: Config.uk  Kraftfile  Makefile.uk  main.c
edge_native/unikraft_pi_uart_pof/: Config.uk  Kraftfile  Makefile.uk  main.c
scripts/: build_pi4_phase1.sh  build_pi4_phase2.sh  build_pi4_phase3.sh  build_pi_image.sh  build_pi_uefi_payload.sh  check_pi_readiness.sh  discover_pi_uefi_nonkvm.sh  download_dataset.sh  export_edge_c_artifacts.py  export_partitions.py  generate_embedded_edge_model.py  generate_pi_readiness_manifest.py  pi_uefi_model_gate.sh  prepare_pi_boot_media.sh  prepare_pi_boot_payload.sh  prepare_pi_uefi_boot_media.sh  preprocess_dataset.py  profile_memory.py  run_cloud.py  run_edge.py  run_prepi_validation.sh  run_vps_roundtrip_matrix.sh  smoke_test.py  stage_pi4_phase1_sdcard.sh  stage_pi4_phase2_sdcard.sh  stage_pi4_phase3_sdcard.sh  stage_pi_uefi_bundle.sh  train.py  validate_t01_unikraft_qemu.sh  validate_uk_edge_selftest_qemu.sh
tests/: conftest.py  test_api_contract.py  test_config.py  test_context.py  test_dataset_config.py  test_edge_native_cloud_roundtrip.py  test_edge_native_cloud_roundtrip_generic.py  test_edge_native_controller.py  test_edge_native_export.py  test_edge_native_failures.py  test_edge_native_forward.py  test_edge_native_forward_multi.py  test_edge_native_quant.py  test_edge_native_transport_failures.py  test_feasibility.py  test_memory.py  test_model.py  test_partition.py  test_policies.py  test_quantization.py  test_schemas.py  test_serialization.py  test_smoke.py  test_training_dryrun.py
unisplit/: __init__.py
unisplit/cloud/: __init__.py  app.py  backends.py  inference.py  model_registry.py  routes.py  server.py
unisplit/edge/: __init__.py  benchmark.py  cli.py  client.py  context.py  ingestion.py  runner.py  simulator.py
unisplit/edge_native/: __init__.py  export_c.py
unisplit/experiments/: metrics.py  netem.py  replay.py  runner.py
unisplit/model/: __init__.py  cnn.py  export.py  partition.py  registry.py
unisplit/policies/: __init__.py  base.py  linucb.py  static.py
unisplit/profiler/: __init__.py  cli.py  (+3 more)
(+16 files in other folders)
