[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unisplit"
version = "0.1.0"
description = "Memory-Constrained Adaptive Split Inference for Edge-Cloud IoT Anomaly Detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "UniSplit Authors"}]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["unisplit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
